# animal-classificator

./: main.py  pyproject.toml
