[tool.poetry]
name = "animal-classificator"
version = "0.1.0"
description = ""
authors = ["Kauan-Azevedo <kauanazevedo2010@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
